--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "lowdb": "^1.0.0",
     "uuid": "^9.0.1"
   },
