--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "build": "cd frontend && npm run build",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
-  "keywords": ["golf", "fantasy", "game", "browser"],
+  "keywords": [
+    "golf",
+    "fantasy",
+    "game",
+    "browser"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
-} 
+}
