--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "lowdb": "^1.0.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "uuid": "^9.0.1"
   },
